# DormitoryCultureFestival

./: .gitignore  README.md  fix_filenames.ps1  package-lock.json  package.json  quiz 设计.md  匹配度设计.md
backend/: .gitignore  main.py  pyproject.toml  wordcloud_data.json
backend/data/database/: db.db
backend/src/backend/: __init__.py  config.py  database.py  logger.py  wordcloud.py
backend/src/backend/model/: quiz.py  wordcloud.py
backend/src/backend/router/: ai.py  certificate.py  quiz.py  upload.py  utils.py  wordcloud.py
backend/src/backend/schema/: certificate.py  quiz.py  wordcloud.py
data/database/: db.db
frontend/: DESKTOP_BUILDER_README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/components/: AIStyleSelector.vue  BackgroundPanel.vue  ContextMenu.vue  DesktopBuilder.vue  DesktopCanvas.vue  ElementEditor.vue  ElementPanel.vue  EventHeader.vue  ImageUploader.vue  LoadingSpinner.vue  RadarChart.vue  SaveSharePanel.vue  TeamCodeInput.vue  TeamMatchResult.vue  Toolbar.vue  WordCloud.vue  WordCloudSelector.vue  WordCloudThemeSelector.vue  types.ts
frontend/app/composables/: useAIImageGeneration.ts  useDesktopBuilder.ts  useImageUpload.ts
frontend/app/config/: ai-style-presets.ts  branding.ts  config.ts  desktop-elements.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: desktop-builder.vue  index.vue  match.vue  quiz-leaderboard.vue  quiz.vue  qv1RIFyE.vue  team-match.vue  word-cloud.vue
frontend/example/: 证书生成.html
frontend/types/: qrcode.d.ts
