[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "XuChenXu", email = "91937041+ChenXu233@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.3",
    "aiosqlite>=0.21.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn src.backend:app --reload"
server = "uvicorn src.backend:app --port 8000 --host 0.0.0.0"